# hyphern

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  start  start.fish
.github/workflows/: build-to-wheel.yml  docs-deploy.yml
docs/: Makefile  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
